--- a/.github/workflows/main_hackathonapril22.yml
+++ b/.github/workflows/main_hackathonapril22.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+        uses: nikitagupta/setup-php@v2
         with:
           php-version: '7.4'
 
